--- a/block-BRaabd/code/image-matcher/public/index.html
+++ b/block-BRaabd/code/image-matcher/public/index.html
@@ -28,7 +28,7 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <h1 class="heading">Image Matcher</h1>
+    <h1 class="heading">Show Images Based On Button UI</h1>
     <div id="root"></div>
     <!--
       This HTML file is a template.
